PHORONIX TEST SUITE CHANGE-LOG

Phoronix Test Suite (Git)

pts-core: Various external dependency updates
pts-core: Expose NUM_CPU_PHYSICAL_CORES to test profiles as alternative to NUM_CPU_CORES (logical count)
pts-core: Fix possible situation of openbenchmarking-refresh not updating when IndexCacheTTL is set to 0
pts_Graph: Fix for sometimes tick marker text overlapping
phodevi: Improved physical CPU core detection for architectures like POWER
phodevi: Improved CPU cache size detection

Phoronix Test Suite 8.4.0 Milestone 2
5 November 2018

pts-core: Allow passing PTS environment variables as arguments to PTS and then just have PTS set them in the environment
pts-core: Add dry-run test option
pts-core: Various result parser additions to help parsing of CSV frame-time data for more test profiles (games)
phodevi: Vulkan driver reporting fix

Phoronix Test Suite 8.4.0 Milestone 1
8 October 2018

phodevi: Report vRAM size on GPU model string in GB when over 1GB
pts-core: At run-time also report if test is deprecated/broken
pts-core: Add "node-npm" as an external dependency for Node.js + NPM
phodevi: Drop information reporting support for the long ago Catalyst/fglrx driver stack that hasn't been supported/maintained in many years

Phoronix Test Suite 8.2.0-Rakkestad
11 September 2018

pts-core: Add RequiresDisplay test profile property to indicate if the test profile explicitly requires a monitor / display server to work
pts-core: Add RequiresNetwork test profile property to indicate if the test profile needs a working network connection
pts-core: Add RequiresInternet test profile property to indicate if the test profile needs a working Internet connection
pts-core: Don't install tests where the current run-time checks will fail
phodevi: Improve CPU thread count detection when running under LXC
phodevi: More robust DMI decode ignore value handling
phodevi: Add extra fallback detection for LXC in system-layer

Phoronix Test Suite 8.2.0 Milestone 4
7 September 2018
